--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
-name: Antoine TABARAUD
+#Site settings
+author: Antoine TABARAUD
+description:  Site vitrine de Antoine TABARAUD
+title: Antoine TABARAUD
+lastUpdate:
+    fr: septembre 2020
+    en: September 2020
+
+# Build settings
 markdown: kramdown
 #permalink: /projet/:title
