change yaml errors

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,9 +9,9 @@
 #    en:
 #
 #  content:
-#    fr:
+#    fr: > # use | to create newlines and > to ignore newlines.
 #
-#    en:
+#    en: > # use | to create newlines and > to ignore newlines.
 #
 #
 #  website:
@@ -31,11 +31,11 @@
     fr: <i class="fas fa-lightbulb"></i> IKEA PS 2014 motorisée<br>2020
     en: <i class="fas fa-lightbulb"></i> IKEA PS 2014 motorized<br>2020
   content:
-    fr:
+    fr: > # use | to create newlines and > to ignore newlines.
       Projet de motorisation d'une lampe avec système embarqué.<br>
       Développé au départ avec une télécommande infrarouge, le contrôle fut amélioré vers une interface web avec serveur intégré.<br>
       Ce fut l'occasion de modéliser la lampe et des supports supplémentaires en 3D sur SOLIDWORKS.
-    en:
+    en: > # use | to create newlines and > to ignore newlines.
       Project of motorization of a lamp with onboard system.<br>
       Initially developed with an infrared remote control, the control was improved to a web interface with integrated server.<br>
       It was an opportunity to model the lamp and additional supports in 3D on SOLIDWORKS.
