--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -11,19 +11,19 @@
 - name:
     fr: Diplômes
     en: Diplomas
-  link: /diplomas
+  link: /diplomas/
 
 - name:
     fr: Expériences Professionnelles
     en: Work Experience
-  link: /work_experience
+  link: /work_experience/
 
 - name:
     fr: Projets et réalisations
     en: Projects and achievements
-  link: /projects
+  link: /projects/
 
 - name:
     fr: Me contacter
     en: Contact me
-  link: /contact
+  link: /contact/
