--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 #Site settings
-author: Antoine TABARAUD
-description: Site vitrine de Antoine TABARAUD
-title: Antoine TABARAUD
+author: "Antoine TABARAUD"
+description: "Site vitrine de Antoine TABARAUD"
+title: "Antoine TABARAUD"
 lastUpdate:
-    fr: septembre 2020
-    en: September 2020
+    fr: "septembre 2020"
+    en: "September 2020"
 
 # Build settings
 markdown: kramdown
