--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 author:        "Antoine TABARAUD"
 description:   "Site vitrine"
 title:         "Antoine TABARAUD"
-image:         "/assets/img/logo site2.svg"
+image:         "/assets/img/logo site2.png"
 keywords:      "Antoine TABARAUD, Antoine TBD, AntTBD, Ant TBD"
 url:           "https://AntTBD.github.io"
 
