--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #Site settings
 author:      "Antoine TABARAUD"
-description: "Site vitrine"
+description: "Personal web site"
 title:       "Antoine TABARAUD"
 image:       "/assets/img/logo site2.png"
 keywords:    "Antoine TABARAUD, TABARAUD, Antoine TBD, AntTBD, Ant TBD"
