--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,8 +28,8 @@
     name:     /assets/img/ReservSalle.png
     alt:      ReservSalle
   title:
-    fr:       <i class="fas fa-gamepad"></i> Projet Web<br>Novembre 2020
-    en:       <i class="fas fa-gamepad"></i> Web Project<br>November 2020
+    fr:       <i class="fas fa-globe"></i> Projet Web<br>Novembre 2020
+    en:       <i class="fas fa-globe"></i> Web Project<br>November 2020
   content:
     fr:       "Projet en groupe afin de réaliser un site de reservation de salle avec une partie admin.<br>
                 Ce dernière a permis d'intégrer quelques notions de sécurité telque, les SESSION PHP, les tokens CSRF et un clavier virtuel crypté pour ne pas envoyé un mot de passe en clair au serveur !<br>
