--- a/_data/diplomas.yml
+++ b/_data/diplomas.yml
@@ -129,8 +129,8 @@
 #########################################################################
 
 - title:
-    fr:          Lycée Limosin
-    en:          Limosin High school
+    fr:          Lycée Léonard Limosin
+    en:          Léonard Limosin High school
   location:
     fr:          Limoges, France
     en:          Limoges, France
